1. BugFix: read Objective::WorkingDist from hardwareSpezification: replace new Double(val) by Double.valueOf(val) 2. BugFix: parse enumerate values from hardwareSpezification: if value doesn't exists, choose Other